fix: [#63127] Reduce vertical height taken by navbar items on smaller screens

--- a/suila/suila/static/bootstrap/theme.scss
+++ b/suila/suila/static/bootstrap/theme.scss
@@ -162,6 +162,9 @@ header nav.navbar div > span.material-icons {
 header nav.navbar a:hover {
   color: $secondary;
 }
+header nav.navbar ul li {
+  line-height: $spacer;
+}
 header nav.navbar ul.dropdown-menu li a {
   color: $black;
 }
